remove gerunds in titles

--- a/views/pages/index_click_examples.ejs
+++ b/views/pages/index_click_examples.ejs
@@ -4,7 +4,7 @@
         a Node Express application.</p>
 <% } %>
 
-<h4 id="example001">1. <a href="eg001">Creating a clickwrap</a></h4>
+<h4 id="example001">1. <a href="eg001">Create a clickwrap</a></h4>
 <p>
     Creates a clickwrap that you can embed in your website or app.
 </p>
@@ -24,7 +24,7 @@
        href="https://developers.docusign.com/docs/click-api/reference/accounts/clickwraps/updateclickwrapversion">ClickWraps::updateClickwrapVersion</a>
 </p>
 
-<h4 id="example003">3. <a href="eg003">Creating a new clickwrap version</a></h4>
+<h4 id="example003">3. <a href="eg003">Create a new clickwrap version</a></h4>
 <p>Creates a new version of a clickwrap.</p>
 <p>
     API method used:
@@ -32,7 +32,7 @@
        href="https://developers.docusign.com/docs/click-api/reference/accounts/clickwraps/createclickwrapversion/">ClickWraps::createClickwrapVersion</a>
 </p>
 
-<h4 id="example004">4. <a href="eg004">Getting a list of clickwraps</a></h4>
+<h4 id="example004">4. <a href="eg004">Get a list of clickwraps</a></h4>
 <p>
     Gets a list of clickwraps associated with a specific DocuSign user.</p>
 <p>
@@ -41,7 +41,7 @@
        href="https://developers.docusign.com/docs/click-api/reference/accounts/clickwraps/getclickwraps">ClickWraps::getClickwraps</a>
 </p>
 
-<h4 id="example005">5. <a href="eg005">Getting clickwrap responses</a></h4>
+<h4 id="example005">5. <a href="eg005">Get clickwrap responses</a></h4>
 <p>
     Gets user responses to your clickwrap agreements.</p>
 <p>
