Monitor JWT only

--- a/views/pages/index_monitor_examples.ejs
+++ b/views/pages/index_monitor_examples.ejs
@@ -11,7 +11,7 @@
 <% } else { %>
     <h1 class="display-4">Node Launcher</h1>
     <p class="Xlead">
-        Run and explore Monitor API code examples with Authorization Code Grant or JWT Grant authentication
+        Run and explore Monitor API code examples with JWT Grant authentication
 </p>
 <% } %>
 
