shortened title, removed gerund

--- a/views/pages/examples/eg031BulkSendEnvelopes.ejs
+++ b/views/pages/examples/eg031BulkSendEnvelopes.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>31.  Bulk sending envelopes to multiple recipients.</h4>
+<h4>31.  Bulk send envelopes</h4>
 
 <p>
   Demonstrates how to send envelopes in bulk to multiple recipients. First, this example creates a bulk send recipients list, then creates an envelope. After that, 
