shortened title, removed gerund

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -249,7 +249,7 @@
 
 <h2>Bulk operations</h2>
 
-<h4 id="example031">31. <a href="eg031">Bulk sending envelopes to multiple recipients.</a></h4>
+<h4 id="example031">31. <a href="eg031">Bulk send envelopes</a></h4>
 <p>
     Demonstrates how to send envelopes in bulk to multiple recipients. First, this example creates a bulk send recipients list, 
     then creates an envelope. After that, it initiates bulk envelope sending.
