Edited Click Ex1-6 to match standard text

--- a/views/pages/click-examples/eg001CreateClickwrap.ejs
+++ b/views/pages/click-examples/eg001CreateClickwrap.ejs
@@ -2,8 +2,7 @@
 
 <h4>1. Creating a clickwrap</h4>
 <p>
-    This example demonstrates how to use the Click API to create a
-    clickwrap that you can embed in your website or app.
+    Creates a clickwrap that you can embed in your website or app.
 </p>
 
 <% include ../../partials/docBody %>
