--- a/views/pages/click-examples/eg004ListClickwraps.ejs
+++ b/views/pages/click-examples/eg004ListClickwraps.ejs
@@ -2,8 +2,7 @@
 
 <h4>4. Getting a list of clickwraps</h4>
 <p>
-    This example demonstrates how to use the Click API to get a list of
-    clickwraps associated with a specific DocuSign user.
+    Gets a list of clickwraps associated with a specific DocuSign user.
 </p>
 
 <% include ../../partials/docBody %>
