--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -2,7 +2,7 @@
 
 <h4>5. Getting clickwrap responses</h4>
 <p>
-    This example demonstrates how to get user responses to your clickwrap agreements.
+    Gets user responses to your clickwrap agreements.
 </p>
 
 <% include ../../partials/docBody %>
@@ -19,8 +19,10 @@
 
 <% if (clickwrapOk) { %>
     <p>
-        The clickwrap you created via example 1 will be queried.<br/>
-        Please enter a value that uniquely identifies a user, such as an email
+        The clickwrap you created via example 1 will be queried.
+    </p>
+    <p>
+        Please enter a value that uniquely identifies a user, such as an email <br>
         address or employee ID
     </p>
 
