Edited titles on Click1-5

--- a/views/pages/click-examples/eg001CreateClickwrap.ejs
+++ b/views/pages/click-examples/eg001CreateClickwrap.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>1. Creating a clickwrap</h4>
+<h4>1. Create a clickwrap</h4>
 <p>
     Creates a clickwrap that you can embed in your website or app.
 </p>
