--- a/views/pages/click-examples/eg003CreateNewClickwrapVersion.ejs
+++ b/views/pages/click-examples/eg003CreateNewClickwrapVersion.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>3. Creating a new clickwrap version</h4>
+<h4>3. Create a new clickwrap version</h4>
 <p>
     Creates a new version of a clickwrap.
 </p>
