--- a/views/pages/click-examples/eg004ListClickwraps.ejs
+++ b/views/pages/click-examples/eg004ListClickwraps.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>4. Getting a list of clickwraps</h4>
+<h4>4. Get a list of clickwraps</h4>
 <p>
     Gets a list of clickwraps associated with a specific DocuSign user.
 </p>
