--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/examplesHead %>
 
-<h4>5. Getting clickwrap responses</h4>
+<h4>5. Get clickwrap responses</h4>
 <p>
     Gets user responses to your clickwrap agreements.
 </p>
