--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -13,17 +13,14 @@
 <p>Sends an envelope, then uses embedded signing for the first signer. With embedded signing, DocuSign signing is initiated from your website.
 </p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
-    and
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>, 
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
 
 <h4 id="example002">2. <a href="eg002">Request a signature by email (remote signing)</a></h4>
-<p>The envelope includes a pdf, Word, and HTML document. Anchor text
-    (<a target='_blank'
-        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
-    is used to position the signing fields in the documents.
+<p>The envelope includes a pdf, Word, and HTML document. <a target='_blank'
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used to position the signing fields in the documents.
 </p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -45,7 +42,7 @@
 </p>
 
 <h4 id="example005">5. <a href="eg005">List envelope recipients</a></h4>
-<p>Includes current recipient status
+<p>Includes current recipient status.
 </p>
 <p>API method used:
     <a target='_blank'
@@ -53,7 +50,7 @@
 </p>
 
 <h4 id="example006">6. <a href="eg006">List envelope documents</a></h4>
-<p>Includes current recipient status
+<p>Includes current recipient status.
 </p>
 <p>API method used:
     <a target='_blank'
@@ -113,8 +110,7 @@
         Templates</a>
     feature.</p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
-    and
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>, 
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
