--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -27,7 +27,7 @@
 </p>
 
 <h4 id="example003">3. <a href="eg003">List envelope status changes</a></h4>
-<p>The envelopes' current status is included
+<p>The envelopes' current status is included.
 </p>
 <p>API method used:
     <a target='_blank'
@@ -50,7 +50,7 @@
 </p>
 
 <h4 id="example006">6. <a href="eg006">List envelope documents</a></h4>
-<p>Includes current recipient status.
+<p>Lists the envelope's documents. A <i>Certificate of Completion</i> is also included with every envelope.
 </p>
 <p>API method used:
     <a target='_blank'
@@ -58,7 +58,7 @@
 </p>
 
 <h4 id="example007">7. <a href="eg007">Download envelope documents</a></h4>
-<p>Downloads individual documents, the documents concatenated together, or a ZIP file of the documents
+<p>Downloads individual documents, the documents concatenated together, or a ZIP file of the documents.
 </p>
 <p>API method used:
     <a target='_blank'
@@ -66,28 +66,27 @@
 </p>
 
 <h4 id="example008">8. <a href="eg008">Create a template</a></h4>
-<p>Create a template with two roles, <b>signer</b> and <b>cc</b>.</p>
+<p>Creates a template with two roles, <b>signer</b> and <b>cc</b> recipient.</p>
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/list/">Templates::list</a>,
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/create/">Templates::create</a>.
 </p>
 
 <h4 id="example009">9. <a href="eg009">Request a signature by email using a template</a></h4>
-<p>The envelope is defined by the template.
-    The signer and cc recipient name and email are used to fill in the template's <i>roles</i>.</p>
+<p>The envelope is defined by the template. The signer and cc recipient name and email are used to fill the template's <i>roles</i>.</p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example010">10. <a href="eg010">Attach documents using binary transfer</a></h4>
-<p>Binary transfer is 33% more efficient than using Base64 encoding
+<p>Binary transfer is 33% more efficient than using Base64 encoding.
 </p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<h4 id="example011">11. <a href="eg011">Send an envelope in your app (embedded sending)</a></h4>
-<p>Embeds the DocuSign UI in your web app to finalize or update the envelope and documents before they are sent
+<h4 id="example011">11. <a href="eg011">Sends an envelope in your app (embedded sending)</a></h4>
+<p>Embeds the DocuSign UI in your web app to finalize or update the envelope and documents before they are sent.
 </p>
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
@@ -95,7 +94,7 @@
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createsender/">EnvelopeViews::createSender</a>.
 
 <h4 id="example012">12. <a href="eg012">Embed the DocuSign UI in your app</a></h4>
-<p>Redirect the user to the DocuSign web tool.</p>
+<p>Redirects the user to the DocuSign web tool.</p>
 <p>API method used:
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createconsole/">EnvelopeViews::createConsole</a>.
@@ -104,11 +103,9 @@
 <h4 id="example013">13. <a href="eg013">Request a signature using a composite template</a></h4>
 <p>Sends an envelope based on a template.</p>
 <p>In addition to the template's document(s), the example adds an
-    additional document to the envelope by using the
-    <a target='_blank'
+    additional document to the envelope by using the <a target='_blank'
        href='https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/templates/composite/'>Composite
-        Templates</a>
-    feature.</p>
+        templates</a> feature.</p>
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>, 
     <a target='_blank'
@@ -118,11 +115,7 @@
 <h2>Payments</h2>
 
 <h4 id="example014">14. <a href="eg014">Send a request for Accept payments</a></h4>
-<p>Sends an order form with online payment by credit card.
-    Anchor text
-    (<a target='_blank'
-        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
-    is used to position the fields in the documents.
+<p>Sends an order form with online payment by credit card. 
 </p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -180,22 +173,22 @@
 <p>Sends an envelope that requires the recipient to upload a government-issued ID for the purpose of multifactor authentication.</p>
 <p>API methods used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>.
+       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>, 
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h2>Permissions</h2>
 
 <h4 id="example024">24. <a href="eg024">Create a permission profile</a></h4>
-<p>This code example demonstrates how to create a permission profile with the eSignature REST API. </p>
-<p>API methods used:
+<p>Demonstrates how to create a permission profile with the eSignature REST API. </p>
+<p>API method used:
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountpermissionprofiles/create/">AccountPermissionProfiles::create</a>.
 </p>
 
 <h4 id="example025">25. <a href="eg025">Set a permission profile</a></h4>
 <p>Demonstrates how to set a user group's permission profile. You must have already created a permission profile and a group of users.</p>
-<p>API methods used:
+<p>API method used:
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/usergroups/groups/update/">Groups::update</a>.
 </p>
 
@@ -207,36 +200,41 @@
 </p>
 
 <h4 id="example027">27. <a href="eg027">Delete a permission profile</a></h4>
-<p>This code example demonstrates how to delete a permission profile with the eSignature REST API. </p>
-<p>API methods used:
+<p>Demonstrates how to delete a permission profile with the eSignature REST API. </p>
+<p>API method used:
     <a target='_blank'
        href="https://developers.docusign.com/esign-rest-api/code-examples/permission-profile-deleting">AccountPermissionProfiles::delete</a>.
 </p>
 
 <h2>Brands</h2>
 
-<h4 id="example028">28. <a href="eg028">Creating a brand</a></h4>
-<p>This code example demonstrates how to create a brand with the eSignature REST API. </p>
-<p>API methods used:
+<h4 id="example028">28. <a href="eg028">Create a brand</a></h4>
+<p>Creates a brand profile for an account.</p>
+<p>API method used:
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/accounts/accountbrands/create/">AccountBrands::create</a>.
 </p>
 
-<h4 id="example029">29. <a href="eg029">Applying a brand to an envelope</a></h4>
-<p>Demonstrates how to apply a brand you've created to an envelope.</p>
-<p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
+<h4 id="example029">29. <a href="eg029">Apply a brand to an envelope</a></h4>
+<p>Demonstrates how to apply a brand you've created to an envelope. First, this example creates the envelope, 
+then applies the brand to it. <a target='_blank'
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used 
+        to position the signing fields in the documents.</p>
+<p>API method used:
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example030">30. <a href="eg030">Apply a brand and template to an envelope</a></h4>
-<p>Demonstrates how to apply a brand you've created to a template. You must have at least one created template and brand</p>
-<p>API methods used:
+<p>Demonstrates how to apply a brand you've created to a template. You must have at least one created template and brand. <a target='_blank'
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used 
+        to position the signing fields in the documents.<p>
+<p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h2>Bulk operations</h2>
 
-<h4 id="example031">31. <a href="eg031">Bulk-send envelopes</a></h4>
+<h4 id="example031">31. <a href="eg031">Bulk send envelopes</a></h4>
 <p>
     Demonstrates how to send envelopes in bulk to multiple recipients. First, this example creates a bulk send recipients list, 
     then creates an envelope. After that, it initiates bulk envelope sending.
@@ -247,7 +245,7 @@
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>,
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopecustomfields/create/">EnvelopeCustomFields:create</a>,
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/bulkenvelopes/bulksend/createbulksendrequest/">BulkSend:createBulkSendRequest</a>,
-    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/bulkenvelopes/bulksend/getbulksendbatchstatus/">BulkSend:getBulkSendBatchStatus</a>
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/bulkenvelopes/bulksend/getbulksendbatchstatus/">BulkSend:getBulkSendBatchStatus</a>.
 </p>
 
 <h2>Advanced recipient routing</h2>
@@ -257,34 +255,34 @@
     Demonstrates how to create an envelope where the workflow is paused before the envelope is sent to a second recipient.
 </p>
 <p>
-    API methods used:
-    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
+    API method used:
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h4 id="example033">33. <a href="eg033">Unpause a signature workflow</a></h4>
 <p>
     Demonstrates how to update an envelope to resume the workflow that has been paused using the Update Envelope method. You must have created at least one envelope with a paused signature workflow to run this example.
 <p>
-    API methods used:
-    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/update/">Envelopes::update</a>
+    API method used:
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/update/">Envelopes::update</a>.
 </p>
 
 <h4 id="example034">34. <a href="eg034">Use conditional recipients</a></h4>
 <p>
-    Demonstrates how to create an envelope where the workflow is routed to different recipients based on the value of a transaction
+    Demonstrates how to create an envelope where the workflow is routed to different recipients based on the value of a transaction.
 </p>
 <p>
-    API methods used:
-    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
+    API method used:
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
 <h2>Premium features</h2>
 
 <h4 id="example035">35. <a href="eg035">Request a signature by SMS delivery</a></h4>
 <p>
-    Demonstrates how to send a signature request via an SMS message
+    Demonstrates how to send a signature request via an SMS message.
 </p>
 <p>
-    API methods used:
-    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>
+    API method used:
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
