change to italics, remove line break, small fixes

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -19,7 +19,7 @@
 </p>
 
 <h4 id="example002">2. <a href="eg002">Request a signature by email (remote signing)</a></h4>
-<p>The envelope includes a pdf, Word, and HTML document. <a target='_blank'
+<p>The envelope includes a PDF, Word, and HTML document. <a target='_blank'
         href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used to position the signing fields in the documents.
 </p>
 <p>API method used:
@@ -66,7 +66,7 @@
 </p>
 
 <h4 id="example008">8. <a href="eg008">Create a template</a></h4>
-<p>Creates a template with two roles, <b>signer</b> and <b>cc</b> recipient.</p>
+<p>Creates a template with two roles, <i>signer</i> and <i>cc</i> recipient.</p>
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/list/">Templates::list</a>,
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/templates/templates/create/">Templates::create</a>.
@@ -101,8 +101,7 @@
 </p>
 
 <h4 id="example013">13. <a href="eg013">Request a signature using a composite template</a></h4>
-<p>Sends an envelope based on a template.</p>
-<p>In addition to the template's document(s), the example adds an
+<p>Sends an envelope based on a template. In addition to the template's document(s), the example adds an
     additional document to the envelope by using the <a target='_blank'
        href='https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/templates/composite/'>Composite
         templates</a> feature.</p>
@@ -169,7 +168,7 @@
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
-<h4 id="example023">23. <a href="eg023">Require ID Verification (IDV) for a recipient</a></h4>
+<h4 id="example023">23. <a href="eg023">Require ID verification (IDV) for a recipient</a></h4>
 <p>Sends an envelope that requires the recipient to upload a government-issued ID for the purpose of multifactor authentication.</p>
 <p>API methods used:
     <a target='_blank'
