Added new text, made some text changes click1-5

--- a/views/pages/click-examples/eg002ActivateClickwrap.ejs
+++ b/views/pages/click-examples/eg002ActivateClickwrap.ejs
@@ -2,7 +2,7 @@
 
 <h4>2. Activate a clickwrap</h4>
 <p>Activates a new clickwrap that you have already created. 
-    By default, new clickwraps are inactive. <br> You must activate 
+    By default, new clickwraps are inactive. You must activate 
     your clickwrap before you can use it.
 </p>
 
