--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -18,12 +18,25 @@
 <% include ../../partials/gitSource %>
 
 <% if (clickwrapOk) { %>
+
     <p>
-        The clickwrap you created via example 1 will be queried.
+        First, test your clickwrap:
     </p>
+    
+    <ul>
+        <li>Log in to your developer account and select the <strong>Manage</strong> page.
+        <li>Select the Clickwraps tab.
+        <li>
+            In the list of active clickwraps, locate the one you want to test, then click 
+            the dropdown arrow to the right of <strong>COPY CODE</strong> and select <strong>Test Clickwrap</strong>.
+        </li>
+        <li>In the Test Clickwrap dialog box, click <strong>TEST CLICKWRAP</strong>.
+        <li>In the Test Your Clickwrap browser page, enter any string, then click <strong>Test Clickwrap</strong>.
+        <li>Review your displayed clickwrap and click <strong>AGREE</strong> (or the equivalent button you configured) to complete the test.
+    </ul>
+    
     <p>
-        Please enter a value that uniquely identifies a user, such as an email <br>
-        address or employee ID
+        Then enter the same string you used to test your clickwrap in the field below
     </p>
 
     <form class="eg" action="" method="post" data-busy="form">
