Minor text changes on Click 4 and 5

--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -25,7 +25,7 @@
     
     <ul>
         <li>Log in to your developer account and select the <strong>Manage</strong> page.
-        <li>Select the Clickwraps tab.
+        <li>Select the <strong>Clickwraps</strong> tab.
         <li>
             In the list of active clickwraps, locate the one you want to test, then click 
             the dropdown arrow to the right of <strong>COPY CODE</strong> and select <strong>Test Clickwrap</strong>.
@@ -36,7 +36,7 @@
     </ul>
     
     <p>
-        Then enter the same string you used to test your clickwrap in the field below
+        Then enter the same string you used to test your clickwrap in the field below.
     </p>
 
     <form class="eg" action="" method="post" data-busy="form">
