Changed Click5 Text

--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -31,8 +31,8 @@
             the dropdown arrow to the right of <strong>COPY CODE</strong> and select <strong>Test Clickwrap</strong>.
         </li>
         <li>In the Test Clickwrap dialog box, click <strong>TEST CLICKWRAP</strong>.
-        <li>In the Test Your Clickwrap browser page, enter any string, then click <strong>Test Clickwrap</strong>.
-        <li>Review your displayed clickwrap and click <strong>AGREE</strong> (or the equivalent button you configured) to complete the test.
+        <li>In the Test Your Clickwrap browser page, in the <strong>Unique ID</strong> field enter any string, then click <strong>Test Clickwrap</strong>.
+        <li>Review your displayed clickwrap and click <strong>I AGREE</strong> (or the equivalent button you configured) to complete the test.
     </ul>
     
     <p>
@@ -41,7 +41,7 @@
 
     <form class="eg" action="" method="post" data-busy="form">
         <div class="form-group">
-            <label for="clientUserId">User identifier</label>
+            <label for="clientUserId">Unique ID</label>
             <input type="text" class="form-control" id="clientUserId"
                    name="clientUserId" required>
         </div>
