scheduled sending and delayed routing

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -310,8 +310,26 @@ and <a target='_blank'
     API method used:
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
+<h4 id="example035">35. <a href="eg035">Schedule an envelope</a></h4>
+<p>
+    Demonstrates how to schedule sending an envelope using the scheduled sending feature.
+</p>
+<p>
+    API method used:
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>.
+</p>
+<h4 id="example036">36. <a href="eg036">Send an envelope with delayed routing</a></h4>
+
+<p>
+    Demonstrates how to delay an envelope’s delivery between recipients using the delayed routing feature.
+</p>
+<p>
+    API method used:
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>.
+</p>
+
 <h2>Premium Features</h2>
-<h4 id="example035">35. <a href="eg035">Send an envelope by SMS delivery</a></h4>
+<h4 id="example037">37. <a href="eg037">Send an envelope by SMS delivery</a></h4>
 <p>
     This example demonstrates how to send an envelope via an SMS message for a signer (and CC) to read and sign.
 </p>
