scheduled sending and delayed routing (#59)
* scheduled sending and delayed routing

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -13,7 +13,7 @@
 <p>Sends an envelope, then uses embedded signing for the first signer. With embedded signing, DocuSign signing is initiated from your website.
 </p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>, 
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
@@ -106,7 +106,7 @@
        href='https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/templates/composite/'>Composite
         templates</a> feature.</p>
 <p>API methods used:
-    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>, 
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
     <a target='_blank'
        href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
 </p>
@@ -114,7 +114,7 @@
 <h2>Payments</h2>
 
 <h4 id="example014">14. <a href="eg014">Send a request for Accept payments</a></h4>
-<p>Sends an order form with online payment by credit card. 
+<p>Sends an order form with online payment by credit card.
 </p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -172,7 +172,7 @@
 <p>Sends an envelope that requires the recipient to upload a government-issued ID for the purpose of multifactor authentication.</p>
 <p>API methods used:
     <a target='_blank'
-       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>, 
+       href="https://developers.docusign.com/esign-rest-api/reference/Accounts/IdentityVerifications/list">Accounts::getAccountIdentityVerificationsList</a>,
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
 
@@ -215,9 +215,9 @@
 </p>
 
 <h4 id="example029">29. <a href="eg029">Apply a brand to an envelope</a></h4>
-<p>Demonstrates how to apply a brand you've created to an envelope. First, this example creates the envelope, 
+<p>Demonstrates how to apply a brand you've created to an envelope. First, this example creates the envelope,
 then applies the brand to it. <a target='_blank'
-        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used 
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used
         to position the signing fields in the documents.</p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -225,7 +225,7 @@ then applies the brand to it. <a target='_blank'
 
 <h4 id="example030">30. <a href="eg030">Apply a brand and template to an envelope</a></h4>
 <p>Demonstrates how to apply a brand you've created to a template. You must have at least one created template and brand. <a target='_blank'
-        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used 
+        href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">Anchor text</a> is used
         to position the signing fields in the documents.<p>
 <p>API method used:
     <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -235,7 +235,7 @@ then applies the brand to it. <a target='_blank'
 
 <h4 id="example031">31. <a href="eg031">Bulk send envelopes</a></h4>
 <p>
-    Demonstrates how to send envelopes in bulk to multiple recipients. First, this example creates a bulk send recipients list, 
+    Demonstrates how to send envelopes in bulk to multiple recipients. First, this example creates a bulk send recipients list,
     then creates an envelope. After that, it initiates bulk envelope sending.
 </p>
 <p>
@@ -274,10 +274,26 @@ then applies the brand to it. <a target='_blank'
     API method used:
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
+<h4 id="example035">35. <a href="eg035">Schedule an envelope</a></h4>
+<p>
+    Demonstrates how to schedule sending an envelope using the scheduled sending feature.
+</p>
+<p>
+    API method used:
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>.
+</p>
+<h4 id="example036">36. <a href="eg036">Send an envelope with delayed routing</a></h4>
 
-<h2>Premium features</h2>
+<p>
+    Demonstrates how to delay an envelope’s delivery between recipients using the delayed routing feature.
+</p>
+<p>
+    API method used:
+    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes:create</a>.
+</p>
 
-<h4 id="example035">35. <a href="eg035">Request a signature by SMS delivery</a></h4>
+<h2>Premium Features</h2>
+<h4 id="example037">37. <a href="eg037">Send an envelope by SMS delivery</a></h4>
 <p>
     Demonstrates how to send a signature request via an SMS message.
 </p>
