--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -18,8 +18,10 @@ envelope's certificate of completion.</p>
 
 <% include ../../partials/gitSource %>
 <% if (envelopeOk) { %>
-    <p>The last envelope you created with this example launcher will be queried.
-     Recommendation:  use example 16 or 17, then this example, since those examples set a custom data field for the envelope.</p>
+    <p>
+        The last envelope you created with this example launcher will be queried.
+        Recommendation: Create an envelope using <a href="eg016">example 16</a> then use this example in order to see an example of custom tab values.
+    </p>
   
   <form class="eg" action="" method="post" data-busy="form">
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
@@ -27,8 +29,10 @@ envelope's certificate of completion.</p>
   </form>
 
   <% } else { %>
-    <p>Problem: please first create an envelope using <a href="eg016">example 16.</a> <br/>
-     Thank you.</p>
+    <p>
+        Problem: please first create an envelope using <a href="eg016">example 16.</a> <br/>
+        Thank you.
+    </p>
      
   <form class="eg" action="eg016" method="get">
       <button type="submit" class="btn btn-docu">Continue</button>
