edited eSign18 text

--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -30,8 +30,7 @@ envelope's certificate of completion.</p>
 
   <% } else { %>
     <p>
-        Problem: please first create an envelope using <a href="eg016">example 16.</a> <br/>
-        Thank you.
+        Problem: please first create an envelope using <a href="eg016">example 16.</a>
     </p>
      
   <form class="eg" action="eg016" method="get">
