Sync click with other launchers

--- a/views/pages/click-examples/eg005ClickwrapResponses.ejs
+++ b/views/pages/click-examples/eg005ClickwrapResponses.ejs
@@ -17,43 +17,29 @@
 
 <% include ../../partials/gitSource %>
 
-<% if (clickwrapOk) { %>
 
-    <p>
-        First, test your clickwrap:
-    </p>
-    
-    <ul>
-        <li>Log in to your developer account and select the <strong>Manage</strong> page.
-        <li>Select the <strong>Clickwraps</strong> tab.
-        <li>
-            In the list of active clickwraps, locate the one you want to test, then click 
-            the dropdown arrow to the right of <strong>COPY CODE</strong> and select <strong>Test Clickwrap</strong>.
-        </li>
-        <li>In the Test Clickwrap dialog box, click <strong>TEST CLICKWRAP</strong>.
-        <li>In the Test Your Clickwrap browser page, in the <strong>Unique ID</strong> field enter any string, then click <strong>Test Clickwrap</strong>.
-        <li>Review your displayed clickwrap and click <strong>I AGREE</strong> (or the equivalent button you configured) to complete the test.
-    </ul>
-    
-    <p>
-        Then enter the same string you used to test your clickwrap in the field below.
-    </p>
-
-    <form class="eg" action="" method="post" data-busy="form">
-        <div class="form-group">
-            <label for="clientUserId">Unique ID</label>
-            <input type="text" class="form-control" id="clientUserId"
-                   name="clientUserId" required>
-        </div>
-        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-        <button type="submit" class="btn btn-docu">Continue</button>
-    </form>
-<% } else { %>
-    <p>Problem: please first create a clickwrap using
-        <a href="eg001">example 1.</a><br/>Thank you.
+<% if (clickwrapsData.clickwraps.length == 0) { %>
+    <p>Problem: You do not have clickwraps to activate. Go to example#1 and create one: 
+        <a href="eg001">create clickwrap</a><br/>Thank you.
     </p>
     <form class="eg" action="eg001" method="get">
         <button type="submit" class="btn btn-docu">Continue</button>
+    </form>
+<% } else { %>
+    <p>Please choose a clickwrap</p>
+
+    <form class="eg" action="" method="post" data-busy="form-download">
+        <div class="form-group">
+            <label for="clickwrapId">Clickwrap</label>
+            <select class="custom-select" id="clickwrapId"
+                    name="clickwrapId">
+                <% for(var i=0; i < clickwrapsData.clickwraps.length; i++) { %>
+                <option value="<%=clickwrapsData.clickwraps[i].clickwrapId%>"><%= clickwrapsData.clickwraps[i].clickwrapName %></option>
+                <% } %>
+            </select>
+        </div>
+        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
+        <button type="submit" class="btn btn-docu">Submit</button>
     </form>
 <% } %>
 
