--- a/views/pages/click-examples/eg003CreateNewClickwrapVersion.ejs
+++ b/views/pages/click-examples/eg003CreateNewClickwrapVersion.ejs
@@ -21,19 +21,31 @@
 
 <% include ../../partials/gitSource %>
 
-<% if (clickwrapOk) { %>
-    <p>The clickwrap you created via example 1 will be queried.</p>
-
-    <form class="eg" action="" method="post" data-busy="form">
-        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-        <button type="submit" class="btn btn-docu">Continue</button>
-    </form>
-<% } else { %>
-    <p>Problem: please first create a clickwrap using
-        <a href="eg001">example 1.</a><br/>Thank you.
+<% if (clickwrapsData.clickwraps.length == 0) { %>
+    <p>Problem: You do not have clickwraps to activate. Go to example#1 and create one: 
+        <a href="eg001">create clickwrap</a><br/>Thank you.
     </p>
     <form class="eg" action="eg001" method="get">
         <button type="submit" class="btn btn-docu">Continue</button>
+    </form>
+<% } else { %>
+
+    <form class="eg" action="" method="post" data-busy="form-download">
+        <div class="form-group">
+            <label for="clickwrapId">Clickwrap</label>
+            <select class="custom-select" id="clickwrapId"
+                    name="clickwrapId">
+                <% for(var i=0; i < clickwrapsData.clickwraps.length; i++) { %>
+                <option value="<%=clickwrapsData.clickwraps[i].clickwrapId%>"><%= clickwrapsData.clickwraps[i].clickwrapName %></option>
+                <% } %>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="clickwrapName">New Name</label>
+            <input type="text" class="form-control" id="clickwrapName" name="clickwrapName" required/>
+        </div>
+        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
+        <button type="submit" class="btn btn-docu">Submit</button>
     </form>
 <% } %>
 
