sms text changes (#65)
* sms text changes

* fixing sizing on small text

* added step comments

* move Step 2 comments

Co-authored-by: meihDS <70775251+meihDS@users.noreply.github.com>

--- a/views/pages/examples/eg037SmsDelivery.ejs
+++ b/views/pages/examples/eg037SmsDelivery.ejs
@@ -1,13 +1,10 @@
 <% include ../../partials/examplesHead %>
 
-<h4>37. Send an envelope with a remote (email) signer and cc recipient</h4>
-<p>The envelope includes a pdf, Word, and HTML document. Anchor text
-  (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
-  is used to position the signing fields in the documents.
+<h4>37. Request a signature by SMS delivery</h4>
+<p>Sends a signature request via an SMS message.
 </p>
-<p>This is a general example of creating and sending an envelope (a signing request) to a recipient and notifying that recipient via SMS delivery.</p>
 
-  <% include ../../partials/docBody %>
+<% include ../../partials/docBody %>
 
   <p>API method used:
    <a target='_blank' href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
@@ -19,13 +16,13 @@
   <div class="form-group">
     <label for="countryCode">Signer Country Code</label>
     <input type="tel" class="form-control" id="countryCode" name="countryCode"
-          aria-describedby="accessHelp" placeholder="1" required
+          aria-describedby="accessHelp" placeholder="1" required />
     <small id="accessHelp" class="form-text text-muted">The country code for the phone number below.</small>
   </div>
   <div class="form-group">
       <label for="phoneNumber">Signer Phone Number</label>
       <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber"
-             aria-describedby="accessHelp" placeholder="415-555-1212" required
+             aria-describedby="accessHelp" placeholder="415-555-1212" required />
       <small id="accessHelp" class="form-text text-muted">This phone number will receive a notification. We'll never share your phone number with anyone else.</small>
   </div>
     <div class="form-group">
@@ -36,13 +33,13 @@
     <div class="form-group">
       <label for="ccCountryCode">CC Country Code</label>
       <input type="tel" class="form-control" id="ccCountryCode" name="ccCountryCode"
-            aria-describedby="accessHelp" placeholder="1" required
+            aria-describedby="accessHelp" placeholder="1" required />
       <small id="accessHelp" class="form-text text-muted">The country code for the phone number below.</small>
     </div>
     <div class="form-group">
       <label for="ccPhoneNumber">CC Phone Number</label>
       <input type="tel" class="form-control" id="ccPhoneNumber" name="ccPhoneNumber"
-             aria-describedby="accessHelp" placeholder="415-555-1212" required
+             aria-describedby="accessHelp" placeholder="415-555-1212" required />
       <small id="accessHelp" class="form-text text-muted">This phone number will receive a notification. We'll never share your phone number with anyone else.</small>
     </div>
     <div class="form-group">
