--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -293,9 +293,9 @@ then applies the brand to it. <a target='_blank'
 </p>
 
 <h2>Premium Features</h2>
-<h4 id="example037">37. <a href="eg037">Send an envelope by SMS delivery</a></h4>
+<h4 id="example037">37. <a href="eg037">Request a signature by SMS delivery</a></h4>
 <p>
-    Demonstrates how to send a signature request via an SMS message.
+    Sends a signature request via an SMS message.
 </p>
 <p>
     API method used:
